--- a/projet-ui/src/app/navbar/navbar.component.html
+++ b/projet-ui/src/app/navbar/navbar.component.html
@@ -3,6 +3,8 @@
   <a routerLink="">Accueil</a>
   <a routerLink="sortie">Sorties</a>
 
-  <a routerLink="logout" id="b-logout">Déconnexion</a>
+  <span id="spacer"></span>
+
+  <a routerLink="logout">Déconnexion</a>
 
 </ng-container>
