--- a/projet-ui/src/app/sortie/sortie.component.html
+++ b/projet-ui/src/app/sortie/sortie.component.html
@@ -1,1 +1,12 @@
+<div>
+  <p>
+    Lieu de départ : {{sortie?.lieuDepart}}
+    <br/>
+    Distance parcourue : {{sortie?.distanceParcourue}} km
+    <br/>
+    Heure de départ : {{sortie?.heureDepart}}
+    <br/>
+    Heure d'arrivée : {{sortie?.heureArrivee}}
+  </p>
+</div>
 <div id="map"></div>
