--- a/projet-ui/src/app/accueil/accueil.component.html
+++ b/projet-ui/src/app/accueil/accueil.component.html
@@ -1,7 +1,7 @@
 <h1>
   Bienvenue sur l'application Bike
-  <img src="assets/grologo.png" alt="grologo"/>
 </h1>
+<img alt="grologo" src="assets/grologo.png"/>
 
 <p>
   Notre équipe a développé cette application dans le cadre du projet commun des cours de
@@ -19,7 +19,7 @@
   </ul>
 </div>
 
-<a href="https://TODO/">
+<a href="https://github.com/baudu69/bike_android/releases/download/1.0.0/bike.apk">
   <button mat-raised-button color="primary">Télécharger l'application Android</button>
 </a>
 
