--- a/projet-ui/src/app/app.component.css
+++ b/projet-ui/src/app/app.component.css
@@ -1,19 +1,19 @@
 :host {
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
-	background-color: white;
-	box-sizing: border-box;
-	
-	--small: 800px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  background-color: white;
+  box-sizing: border-box;
+  overflow: auto;
+  --small: 800px;
 }
 
 #content {
-	width: 100%;
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
-	overflow: scroll;
+  width: 100%;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
 }
 
 @media screen and (min-width: 800px) {
